Fixed font-size on mobile screen at 0.9rem

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
     list-style: none;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     scroll-behavior: smooth;
     color: white;
 }
